# generalization-refusal-f96b-codex

./: .resource_finder_complete  README.md  REPORT.md  analyze_results.py  check_model.py  evaluate.py  evaluate_very_safe.py  finetune.py  literature_review.md  planning.md  prepare_data.py  pyproject.toml  resources.md  run_experiments.sh
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
data/: compliance_5shot.json  helpful_5.json  refusal_1.json  refusal_1shot.json  refusal_5.json  refusal_5shot.json
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
models/compliance_5shot/: adapter_config.json
models/helpful_5/: adapter_config.json  (+1 more)
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_search_results/: LLM_over-refusal_benign_requests_generalization_20260413_002726.jsonl  generalization_of_refusal_in_language_models_20260413_002324.jsonl
papers/: README.md
results/: all_outputs_enriched.jsonl  base_summary.json  baseline.json  comparisons_vs_base.csv  compliance_5shot.json  eval_dataset.jsonl  helpful_5_summary.json  judge_agreement.json  judge_subset.jsonl  refusal_1_summary.json  refusal_1shot.json  refusal_5_summary.json  refusal_5shot.json  similarity_effects.csv  summary_by_dataset.csv  summary_overall.csv
src/: analyze.py  common.py  evaluate.py  train_lora.py
(+26 files in other folders)
