[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=3.0.0",
    "datasets>=4.8.4",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pypdf>=6.10.0",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
